--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ langchain
 openai
 pydantic
 anthropic
-torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+torch
+torchvision
+torchaudio
