--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ langchain
 openai
 pydantic
 anthropic
-torch==2.6.0+cpu
-torchvision==0.21.0+cpu
-torchaudio==2.6.0+cpu
--f https://download.pytorch.org/whl/cpu
+torch
+torchvision
+torchaudio
